--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,15 @@
 body{
     width:600px;
     margin: 30px auto;
+    background-image: linear-gradient(
+	    30deg, #33ccff 0%, #ccffff 30%, white 50%, #ccffff 80%, #33ccff 100%);
+    
 }
 #empty-div{
     padding: 40px;
+    border: 6px solid #0000cc;
+    background-image: linear-gradient(
+	    30deg, #80aaff 0%, #99ccff 30%, white 50%, #99ccff 80%, #80aaff 100%);
 }
 
 .red {
@@ -15,3 +21,7 @@ body{
 .blue {
     color:blue;
     font-size:24px;}
+
+    label, input {
+        margin: 15px 0;
+    }
