--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 body{
     width:600px;
+    height: 800px;
     margin: 30px auto;
     background-image: linear-gradient(
 	    30deg, #33ccff 0%, #ccffff 30%, white 50%, #ccffff 80%, #33ccff 100%);
@@ -14,7 +15,7 @@ body{
 	    30deg, #80aaff 0%, #99ccff 30%, white 50%, #99ccff 80%, #80aaff 100%);
 }
 
-.red #playerWins {
+.red, #playerWins {
     color:red;
     font-size:24px;
     font-style: italic;
